--- a/prisma-traveller/package.json
+++ b/prisma-traveller/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
-    "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js, graphql --exec babel-node",
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
     "test": "env-cmd ./config/test.env jest --watch --runInBand",
-    "get-schema": "graphql get-schema -p prisma"
+    "get-schema": "graphql get-schema -p prisma --dotenv config/dev.env"
   },
   "jest": {
     "globalSetup": "./tests/config/globalSetup.js",
