--- a/apollo-client/package.json
+++ b/apollo-client/package.json
@@ -9,6 +9,7 @@
     "graphql": "^14.0.2",
     "parcel-bundler": "^1.9.7",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {},
