--- a/prisma-traveller/package.json
+++ b/prisma-traveller/package.json
@@ -46,6 +46,7 @@
     "graphql-cli/**/graphql": "0.13.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "jest": "^23.5.0",
     "nodemon": "^1.19.2"
   },
